--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@ h1 a{color:#000;}
 }
 </style>
  <ul id=l>
-  <li><a href=atom.xml>rss</a></li>
-  <li><a href=https://src.openmymind.net/>oss</a></li>
-  <li><a href=https://twitter.com/karlseguin>twt</a></li>
+  <li><a href=atom.xml>rss</a>
+  <li><a href=https://twitter.com/karlseguin>twt</a>
 </ul>
 
-<h1><a href=#>Hello</a></h1>
+<h1><a href=#>Hi</a></h1>
 <ul id=c>{% for post in site.posts %}{% unless post.tags contains 'creative' %}<li><a href={{ post.url | replace_first: '/', ''}}>{{ post.title | escape}}</a><b>{{ post.date | date: "%-d %b %y" }}</b><p>{% for tag in post.tags %}<a>{{tag}}</a>{% endfor %}</li>{% endunless %}{% endfor %}</ul>
 <script>
 (function(){
